start new space step 4

--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -1333,6 +1333,11 @@
       }
     }
 
+    .select_placeholder~#{$k}__list #{$k}__placeholder {
+      transition: color $ease-main;
+      color: $color-placeholder;
+    }
+
     &:hover {
       #{$k}__inner {
         color: $color-basic;
@@ -1346,6 +1351,10 @@
 
       #{$k}__placeholder {
         color: transparent;
+      }
+
+      .select_placeholder~#{$k}__list #{$k}__placeholder {
+        color: $color-basic;
       }
     }
 
