--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -198,6 +198,14 @@
     &_smt-mg {
       margin-bottom: 35px;
     }
+
+    &_fx-sb {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      align-content: center;
+    }
   }
 
   &__title {
@@ -295,6 +303,18 @@
 
         line-height: (26/14);
       }
+    }
+
+    &_fz18 {
+      @include text-big;
+
+      @include screen('sm') {
+        @include text16;
+      }
+    }
+
+    &_bold {
+      font-weight: 700;
     }
 
     &_dark {
