--- a/app/blocks/page-info/page-info.scss
+++ b/app/blocks/page-info/page-info.scss
@@ -81,6 +81,12 @@
     &:not(:last-child) {
       margin-bottom: 35px;
     }
+
+    &_mg62 {
+      &:not(:last-child) {
+        margin-bottom: 62px;
+      }
+    }
   }
 
   &__description {
