--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -74,6 +74,7 @@ include ../blocks/page/page
 include ../blocks/pagination/pagination
 include ../blocks/panel/panel
 include ../blocks/payment-card/payment-card
+include ../blocks/photo-preview/photo-preview
 include ../blocks/popups/popups
 include ../blocks/price/price
 include ../blocks/progress/progress
@@ -109,6 +110,8 @@ include ../blocks/tip/tip
 include ../blocks/transport-table/transport-table
 include ../blocks/transport-type/transport-type
 include ../blocks/travel-time/travel-time
+include ../blocks/uploader-output/uploader-output
+include ../blocks/uploader/uploader
 include ../blocks/user-link/user-link
 include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/compact-filter/compact-filter
@@ -125,6 +128,7 @@ include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
 include ../components/page-header/page-header
+include ../components/photo-uploader/photo-uploader
 include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-arrange-viewing/popup-arrange-viewing
