--- a/app/pages/new-space/new-space-step3.pug
+++ b/app/pages/new-space/new-space-step3.pug
@@ -27,7 +27,7 @@ block content
             +page-info.__info
               +page-info-image
                 +icon('boxes').icon_boxes._grad3
-              +page-info-title Facilities
+              +page-info-title._mg62 Facilities
               +page-info-description Step 3 <i>of 7</i>
         +content-column-main._no-ptop
           - var facilitiesB = getData('business-facilities.json')
@@ -49,8 +49,8 @@ block content
                     +col({ xl: 2, lg: 3, sm: 4, xs: 6})
                       +facility-checkbox(item.icon, item.iconClass, item.name, item.value, item.checked)!= item.title
             +form-panel.__panel_border
-              +link-icon('select-arrow', 'button')(type="reset")._back._bold._no-shadow.__button Back
-              +button-icon('button', 'select-arrow').__button_wide Next
+              +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Back
+              +button-icon('button', 'select-arrow')(type="submit").__button_wide Next
 
 
 block panels
