--- a/app/pages/new-space/new-space-step6.pug
+++ b/app/pages/new-space/new-space-step6.pug
@@ -27,7 +27,7 @@ block content
             +page-info.__info
               +page-info-image
                 +icon('check-form').icon_check-form._grad4
-              +page-info-title Almost there
+              +page-info-title._mg62 Almost there
               +page-info-description Step 6 <i>of 7</i>
         +content-column-main._no-ptop
 
