--- a/app/pages/new-space/new-space-step61.pug
+++ b/app/pages/new-space/new-space-step61.pug
@@ -27,7 +27,7 @@ block content
             +page-info.__info
               +page-info-image
                 +icon('photo').icon_photo._grad3
-              +page-info-title Photos
+              +page-info-title._mg62 Photos
               +page-info-description Step 4 <i>of 7</i>
         +content-column-main._no-ptop
 
