--- a/app/pages/new-space/new-space-step4.pug
+++ b/app/pages/new-space/new-space-step4.pug
@@ -27,9 +27,19 @@ block content
             +page-info.__info
               +page-info-image
                 +icon('photo').icon_photo._grad3
-              +page-info-title Photos
+              +page-info-title._mg62 Photos
               +page-info-description Step 4 <i>of 7</i>
         +content-column-main._no-ptop
+          +form()._white._flex(data-validated-form)
+            +e.container
+              +form-section._mg65
+                +form-section-header._mg21._fx-sb
+                  +form-section-title Space photos
+                  +form-section-text._bold._fz18._dark(data-file-counter) 0 / 25
+                +photo-uploader
+            +form-panel.__panel_border
+              +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Back
+              +button-icon('button', 'select-arrow')(type="submit" disabled).__button_wide Next
 
 
 block panels
