--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -129,6 +129,7 @@ $color-yellow-mask: #e09a12;
 $color-text-pale: #abb6c4;
 $color-border-lightest: #ebeef0;
 $color-facility-hover: #6d7580;
+$color-main-photo: #2bdcc9;
 
 // ##########
 // Transitions
