--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -137,6 +137,10 @@
       margin-bottom: 21px;
     }
 
+    &_mg26 {
+      margin-bottom: 26px;
+    }
+
     &_mg30 {
       margin-bottom: 30px;
 
@@ -202,9 +206,9 @@
     &_fx-sb {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: baseline;
       flex-wrap: wrap;
-      align-content: center;
+      align-content: baseline;
     }
   }
 
@@ -686,7 +690,7 @@
     width: 100%;
 
     @include screen('sm') {
-      padding: 40px 20px;
+      padding: 40px 10px;
     }
 
     #{$b} {
@@ -700,7 +704,7 @@
       padding: 42px 51px 22px;
 
       @include screen('sm') {
-        padding: 30px 20px;
+        padding: 30px 10px;
       }
     }
   }
