--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -143,6 +143,11 @@
     &_img {
       width: 17px;
       height: 15px;
+
+      #{$b}_icon_sz & {
+        width: 13px;
+        height: 12px;
+      }
     }
 
     &_calendar2 {
