--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -31,7 +31,8 @@ block content
         +link(href="new-space-step1.html") SpacePool - HOST My rental offers New Space Step 1 (new-space-step1.html)
         +link(href="new-space-step2.html") SpacePool - HOST My rental offers New Space Step 2 (new-space-step2.html)
         +link(href="new-space-step3.html") SpacePool - HOST My rental offers New Space Step 3 (new-space-step3.html)
-        //- +link(href="new-space-step4.html") SpacePool - HOST My rental offers New Space Step 4 (new-space-step4.html)
+        +link(href="new-space-step4.html") SpacePool - HOST My rental offers New Space Step 4 (new-space-step4.html)
+        +link(href="new-space-step41.html") SpacePool - HOST My rental offers New Space Step 4-1 (new-space-step41.html)
 
       +page-title._small Попапы
       +e.list
