--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -861,7 +861,8 @@
       background-color: $color-bg;
       border-top: 1px solid $color-basic;
       border-bottom: 1px solid $color-basic;
-      width: 100px;
+      min-width: 100px;
+      width: 100%;
       max-height: 100px;
       transition: all $ease-main;
 
@@ -1013,6 +1014,7 @@
       }
 
       &--dropdown {
+        min-width: 0;
         width: 100%;
         max-width: none;
         background-color: rgba($color-select-bg, .32);
@@ -1172,6 +1174,8 @@
         border-radius: 0 3px 3px 3px;
         box-shadow: 1px 1px 8px rgba(34, 42, 46, .06);
         max-height: 201px;
+        min-width: 0;
+        width: 290px;
         transition: box-shadow $ease-main, opacity $ease-main;
 
         #{$k}__item {
@@ -1309,6 +1313,7 @@
       }
 
       &--dropdown {
+        min-width: 0;
         width: 100%;
         max-width: none;
         max-height: 276px;
