--- a/app/blocks/uploader-output/uploader-output.pug
+++ b/app/blocks/uploader-output/uploader-output.pug
@@ -1,10 +1,12 @@
 mixin uploader-output()
   +b.uploader-output&attributes(attributes)
     +e.empty-area
+      +uploader Upload images at least 800 px on a shortest side. JPG, PNG, BMP 300 - 5000 kb
     +e.files
-      +grid
-        +col({xl: 4}).uploader-output__area
-        +col({xl: 4 }).hide(data-photo-output-template)
+      +grid.grid_30x40.grid_t55
+        +col({xl: 4, lg: 6, xs: 12 }).uploader-output__area
+          +uploader-small
+        +col({xl: 4, lg: 6, xs: 12 }).hide(data-photo-output-template)
           +photo-preview
             +photo-preview-preview
             +photo-preview-error
