--- a/app/blocks/uploader-output/uploader-output.pug
+++ b/app/blocks/uploader-output/uploader-output.pug
@@ -4,17 +4,6 @@ mixin uploader-output()
       +uploader Upload images at least 800 px on a shortest side. JPG, PNG, BMP 300 - 5000 kb
     +e.files
       +grid.grid_30x40.grid_t55
-        +col({xl: 4, lg: 6, xs: 12 }).uploader-output__area
+        +col({xl: 4, lg: 6, xs: 12 }).uploader-output__area(data-insert-preview-after)
           +uploader-small
-        +col({xl: 4, lg: 6, xs: 12 }).hide(data-photo-output-template)
-          +photo-preview
-            +photo-preview-preview
-            +photo-preview-error
-            +photo-preview-description
-              option(placeholder value="placeholder") What’s on photo?
-              option(value="Cafe") Cafe
-              option(value="Meeting room") Meeting room
-              option(value="Parking") Parking
-              option(value="Roof terrace") Roof terrace
-              option(value="reception") Reception
         block
