--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -33,6 +33,7 @@ block content
         +link(href="new-space-step3.html") SpacePool - HOST My rental offers New Space Step 3 (new-space-step3.html)
         +link(href="new-space-step4.html") SpacePool - HOST My rental offers New Space Step 4 (new-space-step4.html)
         +link(href="new-space-step41.html") SpacePool - HOST My rental offers New Space Step 4-1 (new-space-step41.html)
+        +link(href="new-space-step5.html") SpacePool - HOST My rental offers New Space Step 5 (new-space-step5.html)
 
       +page-title._small Попапы
       +e.list
