new space step5

--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -233,14 +233,19 @@
       line-height: (24/16);
 
       li {
+        padding-left: 19px;
 
         &:not(:last-child) {
-          margin-bottom: 13px;
+          margin-bottom: 8px;
         }
 
         &::before {
-          top: 5px;
+          top: 8px;
         }
+      }
+
+      &:not(:first-child) {
+        margin-top: 32px;
       }
     }
   }
