--- a/app/pages/new-space/new-space-step5.pug
+++ b/app/pages/new-space/new-space-step5.pug
@@ -30,6 +30,83 @@ block content
               +page-info-title Space Rules and additional terms
               +page-info-description Step 5 <i>of 7</i>
         +content-column-main._no-ptop
+          +form()._white._flex(data-validated-form)
+            +e.container_pb120
+              +form-section._sm-mg
+                +e.row
+                  +e.column_access
+                    +form-section-wrapper
+                      +checkbox('access', '24hours', 'checked') 24 Hour Access
+                  +e.column_stretch
+                    +grid.grid_bigger.grid_int10
+                      +col({xl: 6, sm: 12})
+                        +form-section-wrapper._separator2
+                          +form-box('Space work time from')
+                            +select.js-select-input(name="workTimeFrom" required)
+                              option(value="placeholder" placeholder) Space work time from
+                              option(value="1:00") 1:00
+                              option(value="2:00") 2:00
+                              option(value="3:00") 3:00
+                              option(value="4:00") 4:00
+                              option(value="5:00") 5:00
+                              option(value="6:00") 6:00
+                              option(value="7:00") 7:00
+                              option(value="8:00") 8:00
+                              option(value="9:00") 9:00
+                              option(value="10:00") 10:00
+                              option(value="11:00") 11:00
+                              option(value="12:00") 12:00
+                      +col({xl: 6, sm: 12})
+                        +form-section-wrapper
+                          +form-box('Till')
+                            +select.js-select-input(name="workTimeTill" required)
+                              option(value="placeholder" placeholder) Till
+                              option(value="1:00") 1:00
+                              option(value="2:00") 2:00
+                              option(value="3:00") 3:00
+                              option(value="4:00") 4:00
+                              option(value="5:00") 5:00
+                              option(value="6:00") 6:00
+                              option(value="7:00") 7:00
+                              option(value="8:00") 8:00
+                              option(value="9:00") 9:00
+                              option(value="10:00") 10:00
+                              option(value="11:00") 11:00
+                              option(value="12:00") 12:00
+              +form-section._mid-mg
+                +form-section-wrapper
+                  +form-box('Basic space rules (optional)', '', '', '', '', '400')
+                    +textarea(type="text" name="basicRules" placeholder="Basic space rules (optional)" rows="1" required maxlength="400")
+              +form-section
+                +e.row
+                  +e.column_rules
+                    +form-section-header._mg24
+                      +form-section-title('h5')._small Basic Rule points (optional)
+                    +form-section-content()(data-deleted-group)
+                      +form-section-wrapper()._mg29(data-deleted-object)
+                        +form-box-removable('')._icon
+                          +input(type="text" name="rules[0]" placeholder="Rule" value="Pets allowed").input_points
+                      +form-section-wrapper()._mg29(data-deleted-object)
+                        +form-box-removable('')._icon
+                          +input(type="text" name="rules[1]" placeholder="Rule" value="Entrance only by electornic key").input_points
+                      +form-section-wrapper()._mg29(data-deleted-object)
+                        +form-box-removable('')._icon
+                          +input(type="text" name="rules[2]" placeholder="Rule" value="Silent time from 10PM till 8 AM").input_points
+                      +form-section-wrapper()._mg29(data-deleted-object)
+                        +form-box-removable('')._icon
+                          +input(type="text" name="rules[3]" placeholder="Rule").input_points
+                  +e.column_stretch
+                    +content-zone._mid2._pr
+                      h5 Example for Space Rules:
+                      p The building starts to work at 8:00 am, workers can come at 8:30 am. Cleaning every day starts at 9pm. Car parking available for clients within 1 hour, afterwards parking will be charged 5 pounds per hour.
+                      ul
+                        li No dancing
+                        li No swearing
+                        li Be eco friendly
+                        li Leve the bikes on parking lot
+            +form-panel.__panel_border
+              +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Back
+              +button-icon('button', 'select-arrow')(type="submit").__button_wide Next
 
 
 block panels
